sys messages list 2

--- a/app/blocks/bubble/bubble.scss
+++ b/app/blocks/bubble/bubble.scss
@@ -130,7 +130,9 @@
 
     #{$b} {
       &__timestamp {
-        display: none;
+        @include screen('sm') {
+          display: none;
+        }
       }
     }
   }
