--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -493,6 +493,27 @@
     }
   }
 
+  &_shorter {
+    #{$b}__text {
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+
+    &#{$b}_border {
+      #{$b}__text {
+        padding-left: 12px;
+        padding-right: 12px;
+      }
+    }
+
+    &#{$b}_thin-border {
+      #{$b}__text {
+        padding-left: 13px;
+        padding-right: 13px;
+      }
+    }
+  }
+
   &_red {
     background-image: linear-gradient(to left, $color-gradient-red1 0%, $color-gradient-red2 100%);
   }
