--- a/app/blocks/dialog/dialog.pug
+++ b/app/blocks/dialog/dialog.pug
@@ -268,6 +268,128 @@ mixin dialog2()
               +notification-title._icon
                 +icon('block-cross').__icon_cross
                 +e.title-text Contract was terminated
+        +bubble('li', '15:45', "2018-10-29T15:45")._notification._mob-notime.__item_wide
+          +notification
+            +notification-head('Informative message:')
+              +offer-info
+                +box._big._orange
+                +e.title._fz16 HOT DESK
+            +notification-content
+              +e.subtitle You’ve requested viewing at:
+              +notification-title._fz40._mt0 2019 July9 14:30
+            +notification-footer._txt
+              +short-info('Viewing request status:')._line
+                +e.text_bold._red Rejected
+            +informer.__informer_mt0
+              +e.text Reason:&nbsp;
+                b This offer is no longer available. Sorry about that.
+        +bubble('li', '15:45', "2018-10-29T15:45")._notification._mob-notime.__item_wide
+          +notification
+            +notification-head('Informative message:')
+              +offer-info
+                +box._big._orange
+                +e.title._fz16 HOT DESK
+            +notification-content
+              +e.subtitle You’ve requested viewing at:
+              +notification-title._fz40._mt0 2019 July9 14:30
+            +notification-footer._txt
+              +short-info('Viewing request status:')._line
+                +e.text Awating confirmation
+        +bubble('li', '15:45', "2018-10-29T15:45")._notification._mob-notime.__item_wide
+          +notification
+            +notification-head('Informative message:')
+              +offer-info
+                +box._big._orange
+                +e.title._fz16 HOT DESK
+            +notification-content
+              +e.subtitle You’ve requested viewing at:
+              +notification-title._fz40._mt0 2019 July9 14:30
+            +notification-footer._txt
+              +short-info('Viewing request status:')._line
+                +state()._check._big._bold Viewing Confirmed
+        +bubble('li', '15:45', "2018-10-29T15:45")._notification._mob-notime.__item_wide
+          +notification
+            +notification-head('Friendly reminder:')
+              +offer-info
+                +box._big._orange
+                +e.title._fz16 HOT DESK
+            +notification-content
+              +e.subtitle You have workplace viewing <b>Tommorow</b>
+              +notification-title._mt-4 June 20, 14:00
+            +short-space.__space
+              +short-space-media
+                +e.IMG.image(src="assets/images/space5.jpg")
+              +short-space-content
+                +e.title Central Working - City
+                +e.text 4 Crown Pl, London EC2A 4BT,
+            +notification-footer._txt
+              +e.buttons_sps
+                +button()._border._border_bg-white._shorter._mob-smaller.__button Decline viewing
+                +button()._shorter._mob-smaller.__button Ok expect me
+        +bubble('li', '15:45', "2018-10-29T15:45")._notification._mob-notime.__item_wide
+          +notification
+            +notification-head('So, will we continue ?')
+              +offer-info
+                +box._big._orange
+                +e.title._fz16 HOT DESK
+            +notification-content
+              +e.subtitle You had workplace viewing at
+              +notification-title._mt-4 June 20, 14:00
+            +short-space.__space
+              +short-space-media
+                +e.IMG.image(src="assets/images/space5.jpg")
+              +short-space-content
+                +e.title Central Working - City
+                +e.text 4 Crown Pl, London EC2A 4BT,
+            +notification-footer._txt
+              +e.buttons
+                +button()._shorter._mob-smaller.__button_wide Go to Space Page to make tenancy request
+        +bubble('li', '15:45', "2018-10-29T15:45")._notification._mob-notime.__item_wide
+          +notification
+            +notification-head('Viewing Request:')
+            +notification-content
+              +e.subtitle You have new workplace viewing request
+              +notification-title._mt-4 June 20, 14:00
+            +short-space.__space
+              +short-space-media
+                +e.IMG.image(src="assets/images/space5.jpg")
+              +short-space-content
+                +e.title Central Working - City
+                +e.info
+                  +offer-info.__offer
+                    +box._big._orange
+                    +e.title._fz16 HOT DESK
+                  +e.text 5th Floor Co-working area HOT desks
+            +notification-footer._txt
+              +e.buttons_sps
+                +button()._border._border_bg-white._shorter._mob-smaller.__button Decline
+                +button()._shorter._mob-smaller.__button Accept request
+        +bubble('li', '15:45', "2018-10-29T15:45")._notification._mob-notime.__item_wide
+          +notification
+            +notification-head('Friendly reminder:')
+            +notification-content
+              +e.subtitle You have workplace viewing <b>Tommorow</b>
+              +notification-title._mt-4 June 20, 14:00
+            +short-space.__space_last
+              +short-space-media
+                +e.IMG.image(src="assets/images/space5.jpg")
+              +short-space-content
+                +e.title Central Working - City
+                +e.info
+                  +offer-info.__offer
+                    +box._big._orange
+                    +e.title._fz16 HOT DESK
+                  +e.text 5th Floor Co-working area HOT desks
+        +bubble('li', '15:45', "2018-10-29T15:45")._notification._mob-notime.__item_wide
+          +notification
+            +notification-head('Afterwards')
+            +notification-content
+              +e.subtitle You had workplace viewing at
+              +notification-title._mt-4 June 20, 14:00
+            +notification-footer._txt2
+              +e.buttons
+                +button()._shorter._mob-smaller.__button_wide Close this deal
+              +e.text_fz18._mt._tacenter Or you can just close it later and keep conversation with your potential tenant.
       +e.head_mg
         +e.TIME.date(datetime="2018-10-29") Few minutes ago
       +e.UL.list
@@ -518,3 +640,125 @@ mixin dialog3()
               +notification-title._icon
                 +icon('block-cross').__icon_cross
                 +e.title-text Contract was terminated
+        +bubble('li', '15:45', "2018-10-29T15:45")._notification._mob-notime.__item_wide
+          +notification
+            +notification-head('Informative message:')
+              +offer-info
+                +box._big._orange
+                +e.title._fz16 HOT DESK
+            +notification-content
+              +e.subtitle You’ve requested viewing at:
+              +notification-title._fz40._mt0 2019 July9 14:30
+            +notification-footer._txt
+              +short-info('Viewing request status:')._line
+                +e.text_bold._red Rejected
+            +informer.__informer_mt0
+              +e.text Reason:&nbsp;
+                b This offer is no longer available. Sorry about that.
+        +bubble('li', '15:45', "2018-10-29T15:45")._notification._mob-notime.__item_wide
+          +notification
+            +notification-head('Informative message:')
+              +offer-info
+                +box._big._orange
+                +e.title._fz16 HOT DESK
+            +notification-content
+              +e.subtitle You’ve requested viewing at:
+              +notification-title._fz40._mt0 2019 July9 14:30
+            +notification-footer._txt
+              +short-info('Viewing request status:')._line
+                +e.text Awating confirmation
+        +bubble('li', '15:45', "2018-10-29T15:45")._notification._mob-notime.__item_wide
+          +notification
+            +notification-head('Informative message:')
+              +offer-info
+                +box._big._orange
+                +e.title._fz16 HOT DESK
+            +notification-content
+              +e.subtitle You’ve requested viewing at:
+              +notification-title._fz40._mt0 2019 July9 14:30
+            +notification-footer._txt
+              +short-info('Viewing request status:')._line
+                +state()._check._big._bold Viewing Confirmed
+        +bubble('li', '15:45', "2018-10-29T15:45")._notification._mob-notime.__item_wide
+          +notification
+            +notification-head('Friendly reminder:')
+              +offer-info
+                +box._big._orange
+                +e.title._fz16 HOT DESK
+            +notification-content
+              +e.subtitle You have workplace viewing <b>Tommorow</b>
+              +notification-title._mt-4 June 20, 14:00
+            +short-space.__space
+              +short-space-media
+                +e.IMG.image(src="assets/images/space5.jpg")
+              +short-space-content
+                +e.title Central Working - City
+                +e.text 4 Crown Pl, London EC2A 4BT,
+            +notification-footer._txt
+              +e.buttons_sps
+                +button()._border._border_bg-white._shorter._mob-smaller.__button Decline viewing
+                +button()._shorter._mob-smaller.__button Ok expect me
+        +bubble('li', '15:45', "2018-10-29T15:45")._notification._mob-notime.__item_wide
+          +notification
+            +notification-head('So, will we continue ?')
+              +offer-info
+                +box._big._orange
+                +e.title._fz16 HOT DESK
+            +notification-content
+              +e.subtitle You had workplace viewing at
+              +notification-title._mt-4 June 20, 14:00
+            +short-space.__space
+              +short-space-media
+                +e.IMG.image(src="assets/images/space5.jpg")
+              +short-space-content
+                +e.title Central Working - City
+                +e.text 4 Crown Pl, London EC2A 4BT,
+            +notification-footer._txt
+              +e.buttons
+                +button()._shorter._mob-smaller.__button_wide Go to Space Page to make tenancy request
+        +bubble('li', '15:45', "2018-10-29T15:45")._notification._mob-notime.__item_wide
+          +notification
+            +notification-head('Viewing Request:')
+            +notification-content
+              +e.subtitle You have new workplace viewing request
+              +notification-title._mt-4 June 20, 14:00
+            +short-space.__space
+              +short-space-media
+                +e.IMG.image(src="assets/images/space5.jpg")
+              +short-space-content
+                +e.title Central Working - City
+                +e.info
+                  +offer-info.__offer
+                    +box._big._orange
+                    +e.title._fz16 HOT DESK
+                  +e.text 5th Floor Co-working area HOT desks
+            +notification-footer._txt
+              +e.buttons_sps
+                +button()._border._border_bg-white._shorter._mob-smaller.__button Decline
+                +button()._shorter._mob-smaller.__button Accept request
+        +bubble('li', '15:45', "2018-10-29T15:45")._notification._mob-notime.__item_wide
+          +notification
+            +notification-head('Friendly reminder:')
+            +notification-content
+              +e.subtitle You have workplace viewing <b>Tommorow</b>
+              +notification-title._mt-4 June 20, 14:00
+            +short-space.__space_last
+              +short-space-media
+                +e.IMG.image(src="assets/images/space5.jpg")
+              +short-space-content
+                +e.title Central Working - City
+                +e.info
+                  +offer-info.__offer
+                    +box._big._orange
+                    +e.title._fz16 HOT DESK
+                  +e.text 5th Floor Co-working area HOT desks
+        +bubble('li', '15:45', "2018-10-29T15:45")._notification._mob-notime.__item_wide
+          +notification
+            +notification-head('Afterwards')
+            +notification-content
+              +e.subtitle You had workplace viewing at
+              +notification-title._mt-4 June 20, 14:00
+            +notification-footer._txt2
+              +e.buttons
+                +button()._shorter._mob-smaller.__button_wide Close this deal
+              +e.text_fz18._mt._tacenter Or you can just close it later and keep conversation with your potential tenant.
