--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -96,6 +96,7 @@ include ../blocks/section/section
 include ../blocks/selectable-block/selectable-block
 include ../blocks/short-info/short-info
 include ../blocks/short-profile/short-profile
+include ../blocks/short-space/short-space
 include ../blocks/sidebar/sidebar
 include ../blocks/sign-input/sign-input
 include ../blocks/signatures/signatures
