--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -2455,9 +2455,9 @@ block content
                           +e.text &pound; 560.90
                   +notification-footer._tbl
                     +e.buttons
-                      +button()._border._border_bg-white._short._mob-smaller.__button View/Print Invoice
+                      +button()._border._border_bg-white._shorter._mob-smaller.__button View/Print Invoice
                       +link-icon('download')(href="#")._icon_small._download-small._no-shadow._bold.__link PDF
-                      +button()._short._mob-smaller.__button Pay now
+                      +button()._shorter._mob-smaller.__button Pay now
               +e.LI.item_wide
                 +notification._white
                   +notification-head('Billing information:')
@@ -2519,7 +2519,7 @@ block content
                     +notification-timer2('Current contract is Active Till:') 30 October 2020
                   +notification-footer._smpd
                     +notification-buttons._center
-                      +button()._border._border_bg-white._short._mob-smaller.__button Cancel Request
+                      +button()._border._border_bg-white._shorter._mob-smaller.__button Cancel Request
               +e.LI.item_wide
                 +notification._dark
                   +notification-head('Well that\'s it')
@@ -2530,6 +2530,132 @@ block content
                     +notification-title._icon
                       +icon('block-cross').__icon_cross
                       +e.title-text Contract was terminated
+              //- guests
+              +e.LI.item_wide
+                +notification._white
+                  +notification-head('Informative message:')
+                    +offer-info
+                      +box._big._orange
+                      +e.title._fz16 HOT DESK
+                  +notification-content
+                    +e.subtitle You’ve requested viewing at:
+                    +notification-title._fz40._mt0 2019 July9 14:30
+                  +notification-footer._txt
+                    +short-info('Viewing request status:')._line
+                      +e.text_bold._red Rejected
+                  +informer.__informer_mt0
+                    +e.text Reason:&nbsp;
+                      b This offer is no longer available. Sorry about that.
+              +e.LI.item_wide
+                +notification._white
+                  +notification-head('Informative message:')
+                    +offer-info
+                      +box._big._orange
+                      +e.title._fz16 HOT DESK
+                  +notification-content
+                    +e.subtitle You’ve requested viewing at:
+                    +notification-title._fz40._mt0 2019 July9 14:30
+                  +notification-footer._txt
+                    +short-info('Viewing request status:')._line
+                      +e.text Awating confirmation
+              +e.LI.item_wide
+                +notification._white
+                  +notification-head('Informative message:')
+                    +offer-info
+                      +box._big._orange
+                      +e.title._fz16 HOT DESK
+                  +notification-content
+                    +e.subtitle You’ve requested viewing at:
+                    +notification-title._fz40._mt0 2019 July9 14:30
+                  +notification-footer._txt
+                    +short-info('Viewing request status:')._line
+                      +state()._check._big._bold Viewing Confirmed
+              +e.LI.item_wide
+                +notification._white
+                  +notification-head('Friendly reminder:')
+                    +offer-info
+                      +box._big._orange
+                      +e.title._fz16 HOT DESK
+                  +notification-content
+                    +e.subtitle You have workplace viewing <b>Tommorow</b>
+                    +notification-title._mt-4 June 20, 14:00
+                  +short-space.__space
+                    +short-space-media
+                      +e.IMG.image(src="assets/images/space5.jpg")
+                    +short-space-content
+                      +e.title Central Working - City
+                      +e.text 4 Crown Pl, London EC2A 4BT,
+                  +notification-footer._txt
+                    +e.buttons_sps
+                      +button()._border._border_bg-white._shorter._mob-smaller.__button Decline viewing
+                      +button()._shorter._mob-smaller.__button Ok expect me
+              +e.LI.item_wide
+                +notification._white
+                  +notification-head('So, will we continue ?')
+                    +offer-info
+                      +box._big._orange
+                      +e.title._fz16 HOT DESK
+                  +notification-content
+                    +e.subtitle You had workplace viewing at
+                    +notification-title._mt-4 June 20, 14:00
+                  +short-space.__space
+                    +short-space-media
+                      +e.IMG.image(src="assets/images/space5.jpg")
+                    +short-space-content
+                      +e.title Central Working - City
+                      +e.text 4 Crown Pl, London EC2A 4BT,
+                  +notification-footer._txt
+                    +e.buttons
+                      +button()._shorter._mob-smaller.__button_wide Go to Space Page to make tenancy request
+              //- host
+              +e.LI.item_wide
+                +notification._white
+                  +notification-head('Viewing Request:')
+                  +notification-content
+                    +e.subtitle You have new workplace viewing request
+                    +notification-title._mt-4 June 20, 14:00
+                  +short-space.__space
+                    +short-space-media
+                      +e.IMG.image(src="assets/images/space5.jpg")
+                    +short-space-content
+                      +e.title Central Working - City
+                      +e.info
+                        +offer-info.__offer
+                          +box._big._orange
+                          +e.title._fz16 HOT DESK
+                        +e.text 5th Floor Co-working area HOT desks
+                  +notification-footer._txt
+                    +e.buttons_sps
+                      +button()._border._border_bg-white._shorter._mob-smaller.__button Decline
+                      +button()._shorter._mob-smaller.__button Accept request
+              +e.LI.item_wide
+                +notification._white
+                  +notification-head('Friendly reminder:')
+                  +notification-content
+                    +e.subtitle You have workplace viewing <b>Tommorow</b>
+                    +notification-title._mt-4 June 20, 14:00
+                  +short-space.__space_last
+                    +short-space-media
+                      +e.IMG.image(src="assets/images/space5.jpg")
+                    +short-space-content
+                      +e.title Central Working - City
+                      +e.info
+                        +offer-info.__offer
+                          +box._big._orange
+                          +e.title._fz16 HOT DESK
+                        +e.text 5th Floor Co-working area HOT desks
+              +e.LI.item_wide
+                +notification._white
+                  +notification-head('Afterwards')
+                  +notification-content
+                    +e.subtitle You had workplace viewing at
+                    +notification-title._mt-4 June 20, 14:00
+                  +notification-footer._txt2
+                    +e.buttons
+                      +button()._shorter._mob-smaller.__button_wide Close this deal
+                    +e.text_fz18._mt._tacenter Or you can just close it later and keep conversation with your potential tenant.
+
+
 
 
     //- space on deal page
