--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -130,6 +130,14 @@
     }
   }
 
+  &_gray-dark {
+    color: $color-link-gray;
+
+    #{$b}__icon {
+      fill: $color-link-gray;
+    }
+  }
+
   &__icon {
     position: absolute;
     left: 0;
