--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -21,6 +21,7 @@ include ../blocks/category-filter/category-filter
 include ../blocks/characteristics-table/characteristics-table
 include ../blocks/close/close
 include ../blocks/content-zone/content-zone
+include ../blocks/contract-status/contract-status
 include ../blocks/conversation-info/conversation-info
 include ../blocks/detail/detail
 include ../blocks/dialog/dialog
