--- a/app/pages/deal-passport/deal-passport-state2.pug
+++ b/app/pages/deal-passport/deal-passport-state2.pug
@@ -56,8 +56,7 @@ block panels
     +nav-list(getData('main-menu-user.json'))
 
 block popups
-  +popup-document(getData('legal-formalities.json'))#popup-legal-formalities
+  +popup-document(getData('legal-formalities stage 2.json'))#popup-legal-formalities
     +document-legal
-  +popup-document-mobile#popup-legal-formalities-m
-    +document-legal
+  +popup-document-mobile(getData('contract-status-stage2.json'))#popup-legal-formalities-m
   +popup-chat#popup-chat
