--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -2655,8 +2655,30 @@ block content
                       +button()._shorter._mob-smaller.__button_wide Close this deal
                     +e.text_fz18._mt._tacenter Or you can just close it later and keep conversation with your potential tenant.
 
-
-
+    //- short-space
+    +ui-section
+      +ui-section-head
+        h2 short-space
+        p Блок: block/short-space/
+      +ui-section-content
+        +ui-description .short-space
+        +short-space.__space
+          +short-space-media
+            +e.IMG.image(src="assets/images/space5.jpg")
+          +short-space-content
+            +e.title Central Working - City
+            +e.text 4 Crown Pl, London EC2A 4BT,
+        +ui-description .short-space v2
+        +short-space
+          +short-space-media
+            +e.IMG.image(src="assets/images/space5.jpg")
+          +short-space-content
+            +e.title Central Working - City
+            +e.info
+              +offer-info.__offer
+                +box._big._orange
+                +e.title._fz16 HOT DESK
+              +e.text 5th Floor Co-working area HOT desks
 
     //- space on deal page
     +ui-section
