--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -47,6 +47,7 @@ $color-form-border: #c0c6cf;
 $color-border-light: #dbe1e3;
 $color-text-light: #a5b0bd;
 $color-link-border: #c1c5c5;
+$color-link-gray: #6d737d;
 $color-black: #000;
 $color-overlay: #11151a;
 $color-header-logo: #415a65;
@@ -151,6 +152,7 @@ $color-toolbar: #2b323c;
 $color-chat-message: #f04734;
 $color-profile-post: #86909c;
 $color-profile-name: #535965;
+$color-border-state: #3d4552;
 
 // ##########
 // Transitions
