--- a/app/components/popup-document/popup-document.scss
+++ b/app/components/popup-document/popup-document.scss
@@ -8,7 +8,12 @@
     display: flex;
     justify-content: flex-start;
     align-items: stretch;
-    max-width: 100%;
+    width: 100%;
+  }
+
+  &__document {
+    display: block;
+    width: 100%;
   }
 
   &__column {
@@ -39,7 +44,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
     background-color: $color-hint-bg;
     box-sizing: border-box;
     padding: 10px 68px 10px 70px;
@@ -154,5 +158,22 @@
     width: 100%;
     box-sizing: border-box;
     padding: 144px 68px 120px;
+
+    @include screen('md') {
+      padding: 90px 40px 80px;
+    }
+
+    @include screen('sm') {
+      padding: 60px 10px 60px;
+    }
+  }
+
+  &__status {
+    width: 100%;
+  }
+
+  .popup__footer {
+    width: 100%;
+    transform-origin: 50% 0 0;
   }
 }
