--- a/app/pages/deal-passport/deal-passport.pug
+++ b/app/pages/deal-passport/deal-passport.pug
@@ -58,6 +58,5 @@ block panels
 block popups
   +popup-document(getData('legal-formalities.json'))#popup-legal-formalities
     +document-legal
-  +popup-document-mobile#popup-legal-formalities-m
-    +document-legal
+  +popup-document-mobile(getData('contract-status.json'))#popup-legal-formalities-m
   +popup-chat#popup-chat
