--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -50,6 +50,7 @@ include ../blocks/hide-button/hide-button
 include ../blocks/hint/hint
 include ../blocks/icon/icon
 include ../blocks/indicator/indicator
+include ../blocks/info-editable/info-editable
 include ../blocks/info-price/info-price
 include ../blocks/info-slide/info-slide
 include ../blocks/info/info
@@ -141,6 +142,7 @@ include ../components/document/document
 include ../components/facilities/facilities
 include ../components/filter/filter
 include ../components/footer/footer
+include ../components/form-order-summary/form-order-summary
 include ../components/header/header
 include ../components/lead/lead
 include ../components/location/location
@@ -152,8 +154,12 @@ include ../components/pivot-table/pivot-table
 include ../components/popup-add-offer/popup-add-offer
 include ../components/popup-arrange-viewing/popup-arrange-viewing
 include ../components/popup-cancel-request/popup-cancel-request
+include ../components/popup-cancellation/popup-cancellation
 include ../components/popup-chat/popup-chat
 include ../components/popup-document/popup-document
+include ../components/popup-invoice/popup-invoice
+include ../components/popup-invoices/popup-invoices
+include ../components/popup-order-summary/popup-order-summary
 include ../components/popup-password-change/popup-password-change
 include ../components/popup-signin/popup-signin
 include ../components/popup-subscribe/popup-subscribe
