--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -842,7 +842,7 @@ block content
         p Блок: blocks/tooltip/tooltip
       +ui-section-content()
         +ui-description .js-tooltip
-        +button()(href="#" title="Пример подсказки").js-tooltip Пример подсказки
+        +button('button')(title="Пример подсказки Пример подсказки Пример подсказки Пример подсказки Пример подсказки Пример подсказки Пример подсказки Пример подсказки").js-tooltip Пример подсказки
 
     //- Карты
     +ui-section
