--- a/app/blocks/tooltip/tooltip.scss
+++ b/app/blocks/tooltip/tooltip.scss
@@ -1,11 +1,29 @@
 @import '../../node_modules/tooltipster/dist/css/tooltipster.bundle.css';
 
 .tooltipster-sidetip.tooltipster-borderless .tooltipster-box {
+  @include text;
+
+  display: inline-block;
+  padding: 0 13px;
+  line-height: (23 / 14);
   border: none;
-  background: $color-basic;
-  font-size: 12px;
-  line-height: 1.4;
-  border-radius: 0;
+  background: $color-button-cookie;
+  border-radius: 13px;
+  margin-bottom: 0;
+  text-align: center;
+
+  @include screen('sm') {
+    @include text10;
+  }
+}
+
+.tooltipster-sidetip .tooltipster-content {
+  line-height: (23 / 14);
+  padding: 0;
+
+  @include screen('sm') {
+    line-height: (20/ 10);
+  }
 }
 
 .tooltipster-sidetip.tooltipster-borderless.tooltipster-bottom .tooltipster-box {
@@ -67,6 +85,10 @@
 
 .tooltipster-sidetip.tooltipster-borderless.tooltipster-right .tooltipster-arrow-uncropped {
   left: -8px;
+}
+
+.tooltipster-arrow {
+  display: none !important;
 }
 
 // Анимации
